# Tech3_Projects

./: LICENSE  README.md
B-AIA-500-MAR-5-1-gomoku/: Makefile
B-AIA-500-MAR-5-1-gomoku/src/: AI.py
B-CPP-501-MAR-5-1-rtype/: CMakeLists.txt  README.md  conanfile.txt
B-CPP-501-MAR-5-1-rtype/Client/Connexion/ClientTcp/include/: BoostClientTcp.hpp
B-CPP-501-MAR-5-1-rtype/Client/Connexion/ClientTcp/src/: BoostClientTcp.cpp
B-CPP-501-MAR-5-1-rtype/Client/Connexion/Interface/: IClientTcp.hpp
B-CPP-501-MAR-5-1-rtype/Client/Connexion/UDPgame/include/: UdpGame.hpp
B-CPP-501-MAR-5-1-rtype/Client/Connexion/UDPgame/src/: UdpGame.cpp
B-CPP-501-MAR-5-1-rtype/Client/Graphic/: main.cpp
B-CPP-501-MAR-5-1-rtype/Client/Graphic/include/: Field.hpp  IGraphic.hpp  MenuButton.hpp  SFMLgraph.hpp  Sprite.hpp  strs.hpp
B-CPP-501-MAR-5-1-rtype/Client/Graphic/src/: SFMLgraph.cpp
B-CPP-501-MAR-5-1-rtype/Server/: DLLoader.hpp  main.cpp
B-CPP-501-MAR-5-1-rtype/Server/Game/include/: Game.hpp  Thread.hpp
B-CPP-501-MAR-5-1-rtype/Server/Game/src/: Game.cpp  Thread.cpp
B-CPP-501-MAR-5-1-rtype/Server/GameEngine/Components/include/: AI.hpp  ComponentError.hpp  Damage.hpp  Life.hpp  Position.hpp  Rect.hpp  Speed.hpp  Sprite.hpp
B-CPP-501-MAR-5-1-rtype/Server/GameEngine/Components/src/: AI.cpp  ComponentError.cpp  Damage.cpp  Life.cpp  Position.cpp  Speed.cpp  Sprite.cpp
B-CPP-501-MAR-5-1-rtype/Server/GameEngine/Entities/include/: BasicProjectile.hpp  FirstMob.hpp  Player.hpp  PlayerProjectile.hpp
B-CPP-501-MAR-5-1-rtype/Server/GameEngine/Entities/src/: BasicProjectile.cpp  FirstMob.cpp  Player.cpp  PlayerProjectile.cpp
B-CPP-501-MAR-5-1-rtype/Server/GameEngine/interfaces/: IComponents.hpp  IDEntities.hpp  IEntities.hpp  IFComponents.hpp  IMonster.hpp  IPlayer.hpp  IProjectile.hpp  ITComponents.hpp
B-CPP-501-MAR-5-1-rtype/Server/TCP/include/: ConnexionTcp.hpp  InfoUser.hpp  ParserTcp.hpp  Room.hpp  ServerTcp.hpp
B-CPP-501-MAR-5-1-rtype/Server/TCP/src/: ConnexionTcp.cpp  InfoUser.cpp  ParserTcp.cpp  Room.cpp  ServerTcp.cpp
B-CPP-501-MAR-5-1-rtype/Server/UDP/include/: ServerUDP.hpp
B-CPP-501-MAR-5-1-rtype/Server/UDP/src/: ServerUDP.cpp
B-DEV-500-MAR-5-1-cardgames/: Dockerfile  app.js  docker-compose.yml  package-lock.json  package.json
B-DEV-500-MAR-5-1-cardgames/doc/: DOC DASHBOARD.docx
B-DEV-500-MAR-5-1-cardgames/routes/: index.js
B-DEV-500-MAR-5-1-cardgames/views/: cinema.twig  dashboard.twig  index.twig  layout.twig  login.twig  profil.twig  register.twig  weather.twig
B-DEV-501-MAR-5-1-epicture/app/: build.gradle
B-FUN-500-MAR-5-1-funEvalExpr/: .gitignore  EvalExpr.cabal  Makefile  package.yaml
B-FUN-500-MAR-5-1-funEvalExpr/app/: Main.hs
B-FUN-500-MAR-5-1-funEvalExpr/src/: Eval.hs  Parser.hs
B-MAT-500-MAR-5-1-301danonn/: .gitignore  Makefile
B-MAT-500-MAR-5-1-301danonn/src/: bubble.cpp  insertion.cpp  main.cpp  merge.cpp  quick.cpp  selection.cpp
B-MAT-500-MAR-5-1-302separation/: Makefile
B-MAT-500-MAR-5-1-302separation/src/: addfunc.cpp  main.cpp  print_func.cpp  sortandparser.cpp
B-MAT-500-MAR-5-1-303make/: Makefile
B-MAT-500-MAR-5-1-303make/src/: compiler.cpp  main.cpp  print_func.cpp  sys_func.cpp
B-MAT-500-MAR-5-1-304pacman/: Makefile
B-MAT-500-MAR-5-1-304pacman/src/: computepac.cpp  errorhandler.cpp  main.cpp
B-MAT-500-MAR-5-1-305construction/: Makefile
B-MAT-500-MAR-5-1-305construction/include/: parser.hpp  task.hpp
B-MAT-500-MAR-5-1-305construction/src/: main.cpp  parser.cpp  task.cpp
B-MAT-500-MAR-5-1-306radiator/: Makefile  main.cpp
B-MAT-500-MAR-5-1-306radiator/include/: radiator.hpp
B-MAT-500-MAR-5-1-306radiator/src/: 1projet.cpp  2de.cpp  3merde.cpp
B-MAT-500-MAR-5-1-307multigrains/: Makefile
B-MAT-500-MAR-5-1-307multigrains/src/: main.cpp  print.cpp  utils.cpp
B-MAT-500-MAR-5-1-308reedpipes/: Makefile
B-MAT-500-MAR-5-1-308reedpipes/src/: main.cpp  print.cpp  utils.cpp
B-MAT-500-MAR-5-1-309pollution/: Makefile
B-MAT-500-MAR-5-1-309pollution/include/: parser.hpp
B-MAT-500-MAR-5-1-309pollution/src/: main.cpp  parser.cpp
B-SEC-500-MAR-5-1-caesar/: Makefile
B-SEC-500-MAR-5-1-caesar/src/: aes_in_ecb.py  break_repeating_xor.py  detect_aes_in_ecb.py  detect_single_xor.py  hex_to_base64.py  repeating_xor.py  single_xor_cipher.py  xor_combination.py
B-YEP-500-MAR-5-1-area/: .gitignore  README.md  docker-compose.yml
B-YEP-500-MAR-5-1-area/MobileApp/: settings.gradle
(+274 files in other folders)
